# domain-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  DEBUG_IMPROVEMENTS.md  ENHANCEMENT_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  LICENSE  Makefile  README.md  SLACK_FORMATTING_UPDATE.md  SLACK_TEMPLATE_IMPLEMENTATION.md  domains.txt  pyproject.toml
.cursor/rules/: README.md  code-style.mdc  development.mdc
.github/workflows/: check-domains.yml  python-ci.yml
.taskmaster/: config.json  state.json
src/domain_tracker/: __init__.py  cli.py  core.py  domain_management.py  settings.py  slack_notifier.py  whois_client.py
tests/: conftest.py  test_cli.py  test_core.py  test_domain_management.py  test_settings.py  test_slack_notifier.py  test_whois_client.py
