[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-drop-tracker"
dynamic = ["version"]
description = "A Python CLI tool for monitoring domain availability and sending Slack alerts when domains become available"
authors = [{ name = "Daryl Kang", email = "darylkang@live.com" }]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["domain", "monitoring", "slack", "cli", "automation", "whois", "availability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "requests>=2.28.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",  # For TDD watch mode (--looponfail flag)
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://github.com/darylkang/domain-tracker#readme"
Issues = "https://github.com/darylkang/domain-tracker/issues"
Source = "https://github.com/darylkang/domain-tracker"
Changelog = "https://github.com/darylkang/domain-tracker/releases"

[project.scripts]
vibe = "domain_tracker.cli:app"

[tool.hatch.version]
path = "src/domain_tracker/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_tracker"]

[tool.hatch.envs.default]
dependencies = [
    "mypy",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",  # For TDD watch mode (--looponfail flag)
    "ruff>=0.1.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check {args:.}"
format = "ruff format {args:.}"
type-check = "mypy {args:src/domain_tracker tests}"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--cov=domain_tracker", "--cov-fail-under=50"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
